# fastweather

./: .env.example  README.md  demo_video_link.txt  pyproject.toml  requirements.txt
src/: db.py  main.py  models.py  repositories.py  weather_client.py
